# SmartEquipmentCabinet_LwIP-STM32Net

./: LICENSE  PLAN.md  README.md  base_before_server_requirements.txt  test_server.py
crm/freeRTOS/portable/GCC/ARM_CM4F/: port.c
docs/: architecture.md  build-and-flash.md  door-actuator-integration.md  handover.md  overview.md  repo-structure.md  uplink-flow.md  user-flow.md
mcu/Libraries/CMSIS/: arm_math.h  stm32f4xx.h
mcu/Libraries/STM32F4xx_StdPeriph_Driver/: stm32f4x7_eth.c  stm32f4x7_eth_conf.h  stm32f4xx_fsmc.c
mcu/Libraries/ld/: STM32F429IGTX_FLASH.ld  STM32F429IGTX_RAM.ld
mcu/app/app_auth/Inc/: app_auth.h
mcu/app/app_auth/Src/: app_auth.c
mcu/app/app_data/Inc/: app_data.h
mcu/app/app_data/Src/: app_data.c
mcu/app/app_lwip/Inc/: lwipopts.h  netconf.h  tcp_echoclient.h
mcu/app/app_lwip/Src/: netconf.c  tcp_echoclient.c
mcu/app/app_uplink/Inc/: uplink.h  uplink_codec_json.h  uplink_config.h  uplink_platform.h  uplink_queue.h  uplink_retry.h  uplink_transport.h  uplink_transport_http_netconn.h  uplink_types.h
mcu/app/app_uplink/Src/: uplink.c  uplink_codec_json.c  uplink_config.c  uplink_queue.c  uplink_retry.c  uplink_transport_http_netconn.c
mcu/app/task_light/Inc/: task_light.h
mcu/app/task_light/Src/: task_light.c
mcu/app/task_lvgl/Inc/: task_lvgl.h
mcu/app/task_lvgl/Src/: task_lvgl.c
mcu/app/task_rfid_auth/Inc/: task_rfid_auth.h
mcu/app/task_rfid_auth/Src/: task_rfid_auth.c
mcu/app/task_uplink/Inc/: task_uplink.h
mcu/app/task_uplink/Src/: task_uplink.c
mcu/app/task_uplink_adc/Inc/: task_uplink_adc.h
mcu/app/task_uplink_adc/Src/: task_uplink_adc.c
mcu/bsp/ETH/Inc/: bsp_eth_port.h
mcu/bsp/ETH/Src/: bsp_eth_port.c
mcu/bsp/adc/Inc/: bsp_adc.h
mcu/bsp/adc/Src/: bsp_adc.c
mcu/bsp/flash/Inc/: bsp_spi_flash.h
mcu/bsp/flash/Src/: bsp_spi_flash.c
mcu/bsp/font/Src/: fonts.c
mcu/bsp/lcd/Inc/: bsp_lcd.h
mcu/bsp/lcd/Src/: bsp_lcd.c
mcu/bsp/led/Inc/: bsp_led.h
mcu/bsp/led/Src/: bsp_led.c
mcu/bsp/locker/Inc/: bsp_locker.h
mcu/bsp/locker/Src/: bsp_locker.c
mcu/bsp/nfc/Inc/: rc522_config.h
mcu/bsp/nfc/Src/: rc522_config.c  rc522_function.c
mcu/bsp/sdram/Inc/: bsp_sdram.h
mcu/bsp/sdram/Src/: bsp_sdram.c
mcu/bsp/systick/Inc/: bsp_SysTick.h
mcu/bsp/systick/Src/: bsp_SysTick.c
mcu/bsp/touch/Inc/: bsp_i2c_touch.h  gt9xx.h
mcu/bsp/touch/Src/: bsp_i2c_touch.c  gt9xx.c
mcu/bsp/usart/Inc/: bsp_usart.h
mcu/bsp/usart/Src/: bsp_usart.c
mcu/libx/: __port_config__.h  __port_type__.h  log.h  ringbuffer.c  ringbuffer.h
mcu/middleware/LwIP/port/: ethernetif.c  ethernetif.h  sys_arch.h  sys_arch_port.c
mcu/middleware/LwIP/src/api/: api_lib.c  api_msg.c  err.c  netbuf.c  netdb.c  netifapi.c  sockets.c  tcpip.c
mcu/middleware/LwIP/src/core/: asn1_dec.c  asn1_enc.c  autoip.c  def.c  dhcp.c  dns.c  icmp.c  igmp.c  inet_chksum.c  init.c  ip.c  ip_addr.c  ip_frag.c  mem.c  memp.c  mib2.c  mib_structs.c  pbuf.c  udp.c
mcu/middleware/LwIP/src/include/: dhcp.h  etharp.h  ip.h  ip_addr.h  snmp_msg.h  snmp_structs.h  sys.h  tcp_impl.h
mcu/middleware/LwIP/src/netif/: ethernetif.c  ipcp.c  ppp_oe.c  slipif.c
mcu/middleware/lvgl/: lv_conf.h  lvgl.h
mcu/middleware/lvgl/port/: lv_port_disp.c  lv_port_disp.h  lv_port_indev.c  lv_port_indev.h
mcu/user/: FreeRTOSConfig.h  main.c  stm32f4xx_conf.h  stm32f4xx_it.c  syscalls.c
project/: CMakeLists.txt  arm-gnu-none-eabi.cmake
server/: .env.example  README.md  requirements.txt  run_local.ps1
server/app/: __init__.py  cleanup.py  config.py  main.py  repo_sqlite.py  router_uplink.py  schemas.py  security.py  service_audit.py  service_auth.py
server/tools/: seed_demo_data.py  smoke_test.py
